change build folder and config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "deploy": "gh-pages -d docs"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
