--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jquery.maskedinput": "^1.4.1",
