--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
+    "ion-rangeslider": "^2.3.0",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jquery.maskedinput": "^1.4.1",
