--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "file-loader": "^4.3.0",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
